--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,6 +6,7 @@ bind-key C-a send-prefix
 
 set-option -g status-position top
 
+set -g default-terminal "screen-256color"
 
 unbind %
 bind | split-window -h
@@ -14,7 +15,7 @@ unbind '"'
 bind - split-window -v
 
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
@@ -28,8 +29,8 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+#set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+#set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 
@@ -69,4 +70,4 @@ unbind -T copy-mode-vi MouseDragEnd1Pane
 set -g base-index 1
 setw -g pane-base-index 1
 
-set -g default-terminal "screen-256color"
+
