add tmux config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,9 +4,13 @@ set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix 
 
+set-option -sg escape-time 10
+
 set-option -g status-position top
 
-set -g default-terminal "screen-256color"
+# set default-terminal colors to display default terminal colors
+set-option -sa terminal-overrides ',xterm-256color:Tc'
+set-option -sa terminal-features ',xterm-256color:RGB'
 
 unbind %
 bind | split-window -h
@@ -29,8 +33,8 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
-#set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
-#set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
+set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-battery'
 
@@ -45,6 +49,8 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_status_fill "all"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_connect_separator "yes"
+set -g @catppuccin_status_left_separator  ""
 set -g @catppuccin_status_right_separator_inverse "yes"
 set -g @catppuccin_status_modules_right "directory date_time battery"
 set -g @catppuccin_date_time_text "%m-%d-%y %H:%M"
